gradle config update, and odobot server now waits for DOM to settle before sending the next instruction to help prevent random element finding failures.