@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'idea'
-    id "io.vertx.vertx-plugin" version "1.3.0"
+    id "io.vertx.vertx-plugin" version "1.4.0"
 }
 
 group 'org.example'
@@ -9,7 +9,6 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    jcenter()
     maven { url 'https://jitpack.io' }
     flatDir {
         dirs("libs")
@@ -184,6 +183,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation files('libs/OpenXES-20211004.jar')
+}
+
+compileJava{
+    options.compilerArgs += ["--enable-preview"]
 }
 
 test {
